feat: 항공우주공학과, 소프트웨어학과에 대한 Basic 타입(MSC, BSM) 반환하는 기능 구현
- 단위 테스트 추가