@@ -8,16 +8,15 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public enum AbeekType {
     
-    NONE(Collections.emptySet(), "공학인증에 포함되지 않는 과목"),
+    NONE(Collections.emptySet()), // 공학인증에 포함되지 않는 과목에 대한 ABEEK TYPE
     
-    MSC(Set.of("전자정보통신공학과"), "MSC"),
-    BSM(Collections.emptySet(), "BSM"),
-    MAJOR(Collections.emptySet(), "전공"),
-    GYOYANG(Collections.emptySet(), "전문교양"),
-    DESIGN(Collections.emptySet(), "설계");
+    MSC(Set.of("전자정보통신공학과", "항공우주공학과")),
+    BSM(Set.of("소프트웨어학과")),
+    MAJOR(Collections.emptySet()),
+    GYOYANG(Collections.emptySet()),
+    DESIGN(Collections.emptySet());
 
     private final Set<String> departmentNames;
-    private final String detail;
 
     public static AbeekType getBasicType(String departmentName) {
         return Arrays.stream(values())
